--- a/app.json
+++ b/app.json
@@ -1,15 +1,69 @@
 {
-  "pages": [
-    "pages/index/index",
-    "pages/logs/logs"
-  ],
-  "window": {
-    "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "Weixin",
-    "navigationBarBackgroundColor": "#ffffff"
-  },
-  "style": "v2",
-  "componentFramework": "glass-easel",
-  "sitemapLocation": "sitemap.json",
-  "lazyCodeLoading": "requiredComponents"
-}
+    "pages": [
+      "pages/index/index",
+      "pages/life/life",
+      "pages/selection/selection",
+      "pages/mine/mine"
+    ],
+    "window": {
+      "backgroundTextStyle": "light",
+      "navigationBarBackgroundColor": "#4e54c8",
+      "navigationStyle": "custom",
+      "enablePullDownRefresh": true,
+      "backgroundColor": "#f7f7f7",
+      "backgroundColorTop": "#4e54c8",
+      "backgroundColorBottom": "#f7f7f7"
+    },
+    "tabBar": {
+      "color": "#999999",
+      "selectedColor": "#4e54c8",
+      "backgroundColor": "#ffffff",
+      "borderStyle": "black",
+      "position": "bottom",
+      "list": [
+        {
+          "pagePath": "pages/index/index",
+          "iconPath": "images/tabBar/home.png",
+          "selectedIconPath": "images/tabBar/home-active.png"
+        },
+        {
+          "pagePath": "pages/life/life",
+          "iconPath": "images/tabBar/life.png",
+          "selectedIconPath": "images/tabBar/life-active.png"
+        },
+        {
+          "pagePath": "pages/selection/selection",
+          "iconPath": "images/tabBar/selection.png",
+          "selectedIconPath": "images/tabBar/selection-active.png"
+        },
+        {
+          "pagePath": "pages/mine/mine",
+          "iconPath": "images/tabBar/mine.png",
+          "selectedIconPath": "images/tabBar/mine-active.png"
+        }
+      ]
+    },
+    "networkTimeout": {
+      "request": 10000,
+      "downloadFile": 10000,
+      "connectSocket": 10000,
+      "uploadFile": 10000
+    },
+    "debug": true,
+    "style": "v2",
+    "sitemapLocation": "sitemap.json",
+    "lazyCodeLoading": "requiredComponents",
+    "permission": {
+      "scope.userLocation": {
+        "desc": "你的位置信息将用于小程序位置接口的效果展示"
+      }
+    },
+    "requiredBackgroundModes": [
+      "location"
+    ],
+    "useExtendedLib": {
+      "weui": true
+    },
+    "navigationStyle": "custom"
+
+  }
